fix(website): scrollbar position

--- a/website/src/styles/global.scss
+++ b/website/src/styles/global.scss
@@ -136,6 +136,16 @@ input[type="text"] {
 	& > .content {
 		flex-grow: 1;
 		min-width: 0;
+		margin-right: -1.25rem;
+		margin-bottom: -1.25rem;
+
+		& > * {
+			padding-right: 1.25rem;
+
+			&:last-child {
+				padding-bottom: 1.25rem;
+			}
+		}
 	}
 }
 
